--- a/styles.css
+++ b/styles.css
@@ -323,39 +323,48 @@ html, body {
 /* login form */
 
 Body {  
-  font-family: Calibri, Helvetica, sans-serif;  
-  background-color: rgb(131, 125, 126);  
+    font-family: Calibri, Helvetica, sans-serif;  
+    background-color: rgb(131, 125, 126);  
 }  
 button {   
-       background-color: #2f71ff;   
-       width: 100%;  
-        color: rgb(255, 255, 255);   
-        padding: 15px;   
-        margin: 10px 0px;   
-        border: none;   
-        cursor: pointer;   
-         }   
+    background-color: #2f71ff;   
+    width: 40%;  
+    color: rgb(255, 255, 255);   
+    padding: 12px 20px;   
+    margin: 10px 0px;   
+    border: none;   
+    cursor: pointer;   
+}   
 login-form {   
         border: 3px solid #f1f1f1;   
-    }   
+}   
 input[type=text], input[type=password] {   
-        width: 100%;   
-        margin: 8px 0;  
-        padding: 12px 20px;   
-        display: inline-block;   
-        border: 2px solid rgb(0, 0, 0);   
-        box-sizing: border-box;   
-    }  
+    width: 40%;   
+    margin: 8px 0;  
+    padding: 12px 20px;   
+    display: inline-block;   
+    border: 2px solid rgb(0, 0, 0);   
+    box-sizing: border-box;   
+}  
+
+input[type=text], input[type=username] {   
+    width: 40%;   
+    margin: 8px 0;  
+    padding: 12px 20px;   
+    display: inline-block;   
+    border: 2px solid rgb(0, 0, 0);   
+    box-sizing: border-box;   
+}  
 button:hover {   
-        opacity: 0.7;   
-    }   
+    opacity: 0.7;   
+}   
 .cancelbtn {   
-        width: auto;   
-        padding: 10px 18px;  
-        margin: 10px 5px;  
-    }   
+    width: auto;   
+    padding: 10px 18px;  
+    margin: 10px 5px;  
+}   
         
 login-container {   
-        padding: 25px;   
-        background-color: lightblue;  
-    }   
+    padding: 25px;   
+    background-color: lightblue;  
+}   
