--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,47 @@
     box-sizing: border-box;
     font-family: Raleway;
     color: rgb(0, 0, 0);
+    margin: 0;
+    padding: 0;
 }
 
 html, body {
     margin: 0;
     padding: 0;
     min-height: 100%;
+}
+
+h1 {
+    color: black;
+}
+
+.main-header {  
+    background: linear-gradient(rgba(255,255,255,.5), rgba(255,255,255,.5)), url('img/background.png');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+}
+
+.main-header .container .welcome {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 20px;
+    padding-top: 250px;
+    font-size: 25px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+
+}
+
+.welcome .button {
+    font-family: 18px;
+    text-decoration: none;
+    color: black;
+    border: black 1px solid;
+    padding: 10px 20px;
+    border-radius: 10px;
+    margin-top: 20px;
 }
 
 .nav ul {
@@ -26,6 +61,8 @@ html, body {
 }
 
 .main-nav {
+    padding: 0; 
+    margin: 0;   
     text-align: center;
     font-size: 1.1em;
     font-weight: lighter;
@@ -39,18 +76,7 @@ html, body {
 .nav a:hover {
     background-color: rgba(3, 3, 3, 0.3)
 }
-
-.main-header {  
-    background-image: url('img/background.png');
-    background-blend-mode: multiply;
-    background-size: cover;
-    padding-bottom: 30px;
-    height: calc(100vh - 120px);
-    width: 100%;
-    align-items: center;
-    justify-content: center;
-}
-
+ 
 .company-name {
     text-align: center;
     margin: 0;
